--- a/ruche/Cargo.toml
+++ b/ruche/Cargo.toml
@@ -54,7 +54,7 @@ quinn = { version = "0.11.7", optional = true }
 h3-util = {version = "0.0.4" ,optional = true, default-features = false, features = ["quinn"]}
 rcgen = { version = "0.14.5", optional = true}
 axum-h3 = {version = "0.0.4", optional = true}
-
+socket2 = { version = "0.5.7", optional = true }
 [features]
 hydrate = ["leptos/hydrate"]
 ssr = [
@@ -89,6 +89,7 @@ ssr = [
     "dep:flate2",
     "common/ssr",
     "dep:h3-util",
+    "dep:socket2"
 
 ]
 
