--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,7 +13,9 @@ reqwest = { version = "0.12.24", features = ["json", "rustls-tls"] }
 thiserror = "2.0.17"
 futures = "0.3.31"
 clap= { version = "4", features = ["derive"] }
-
+strum = {version = "0.27.2", features = ["derive"]}
+bitcode = "0.6.7"
+num_enum = "0.7.5"
 
 [profile.release]
 panic = "abort"
