--- a/common/Cargo.toml
+++ b/common/Cargo.toml
@@ -6,7 +6,9 @@ edition = "2021"
 [dependencies]
 riven={workspace = true, optional = true}
 serde={workspace = true}
-bitcode = "0.6.7"
-
+bitcode = {workspace = true}
+strum = {workspace = true}
+num_enum = {workspace = true}
+once_cell = "1.21.3"
 [features]
 ssr=["dep:riven"]
