--- a/common/Cargo.toml
+++ b/common/Cargo.toml
@@ -5,10 +5,10 @@ edition = "2021"
 
 [dependencies]
 riven={workspace = true, optional = true}
-serde={workspace = true}
+serde={workspace = true, optional = true}
 bitcode = {workspace = true}
 strum = {workspace = true}
 num_enum = {workspace = true}
 once_cell = "1.21.3"
 [features]
-ssr=["dep:riven"]
+ssr=["dep:riven", "dep:serde"]
