--- a/ruche/Cargo.toml
+++ b/ruche/Cargo.toml
@@ -24,7 +24,7 @@ memory-serve = { version = "1.2.1", optional = true }
 dashmap = {git="https://github.com/gqsnt/dashmap", rev="781f9883c210a13b50141b57b821a359b8db926e", optional = true}
 sitemap = {version = "0.4.1", optional = true}
 thiserror = {workspace = true, optional = true}
-serde={workspace = true, features = ["derive"]}
+serde={workspace = true, features = ["derive"], optional = true}
 flate2 = { version = "1.0.35", optional = true }
 async-stream = {version = "0.3.6", optional = true}
 serde_json = {workspace = true, optional = true}
@@ -92,7 +92,8 @@ ssr = [
     "dep:h3-util",
     "dep:moka",
     "dep:once_cell",
-    "dep:http"
+    "dep:http",
+    "dep:serde"
 ]
 
 
