--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,7 @@ resolver = "2"
 riven = {git="https://github.com/gqsnt/Riven", rev="78e2300b6966c6dca293292d820e1d165a009ead"}
 serde = {version = "1.0.228", features = ["derive"]}
 serde_json = "1.0.143"
-tokio = { version = "1.47.1", features = ["rt-multi-thread"] }
+tokio = { version = "1.47.1" }
 reqwest = { version = "0.12.24", features = ["json", "rustls-tls"] }
 thiserror = "2.0.17"
 futures = "0.3.31"
